# NTokenizer

./: .gitignore  README.md  pyproject.toml  requirements.txt
artifacts/tokenizer/: viwiki_bpe_8k.vocab
docs/: DEVELOPMENT.md  FINETUNING.md  FINETUNING.vi.md  model_architecture.md  model_architecture.vi.md
scripts/: build_corpus.py  inspect_vocab.py  make_meta.py  prepare_dataset.py  sample.py  test_tokenizer.py  train.py  train_tokenizer_spm.py
src/: model.py  sample.py  train.py
src/ntokenizer/: __init__.py  config.py  corpus.py  dataset.py  device.py  model.py  optim.py  paths.py  tokenizer.py  training.py
src/ntokenizer/cli/: build_corpus.py  inspect_vocab.py  make_meta.py  prepare_dataset.py  sample.py  test_tokenizer.py  train.py  train_tokenizer.py
tests/: conftest.py  test_corpus.py  test_dataset.py  test_finetune.py  test_generation.py  test_model.py  test_optim.py  test_tokenizer_roundtrip.py
tokenizer/: viwiki_bpe_8k.model  viwiki_bpe_8k.vocab
